--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
         run: if [ "${{secrets.SCOPE_DSN}}" = "" ]; then exit 1; fi
       - name: Checkout
         uses: actions/checkout@v1
+      - name: Carthage Build
+        run: carthage update
       - name: Build and test
-        run: |
-          carthage update
-          xcodebuild test -project Hambourgeoisie.xcodeproj -scheme Hambourgeoisie -destination 'platform=iOS Simulator,name=iPhone 11'
+        run: xcodebuild test -project Hambourgeoisie.xcodeproj -scheme Hambourgeoisie -destination 'platform=iOS Simulator,name=iPhone 11'
         env:
           SCOPE_DSN: ${{secrets.SCOPE_DSN}}
