--- a/Hambourgeoisie.xcodeproj/xcshareddata/xcschemes/Hambourgeoisie.xcscheme
+++ b/Hambourgeoisie.xcodeproj/xcshareddata/xcschemes/Hambourgeoisie.xcscheme
@@ -33,8 +33,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;"
-               shellToInvoke = "${SRCROOT}/Carthage/Build/iOS/ScopeAgent.framework/scope-coverage">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;${SRCROOT}/Carthage/Build/iOS/ScopeAgent.framework/scope-coverage&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
