Add a third destination

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        destination: ["platform=iOS Simulator,name=iPhone 11","platform=iOS Simulator,name=iPhone 8" ]
+        destination: ["platform=iOS Simulator,name=iPhone 11", "platform=iOS Simulator,name=iPhone 11 Pro", "platform=iOS Simulator,name=iPhone 8"]
     steps:
       - name: Check if SCOPE_DSN is set
         run: if [ "${{secrets.SCOPE_DSN}}" = "" ]; then exit 1; fi
