Add Intelligent test runner
(cherry picked from commit 8611fac7d917dd5c2cee4523eb6c55a85ea6dd7f)

--- a/Hambourgeoisie.xcodeproj/xcshareddata/xcschemes/Hambourgeoisie.xcscheme
+++ b/Hambourgeoisie.xcodeproj/xcshareddata/xcschemes/Hambourgeoisie.xcscheme
@@ -106,6 +106,16 @@
             value = "CUSTOM_KEY=CUSTOM_VALUE"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "SCOPE_RUNNER_ENABLED"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "SCOPE_RUNNER_EXCLUDE_BRANCHES"
+            value = "master"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
       <Testables>
          <TestableReference
